<resources>
    <string name="app_name">Practica6</string>
    <string name="welcome">Welcome to the Cheezery!</string>
    <string name="welcome_description"> Home of the most wonderful dessert ever seen (and tasted) by the human being!</string>
    <string name="getStarted"> GET STARTED!</string>
    <string name="ourMenu"> Our Menu</string>
    <string name="coldDrinks"> Cold Drinks</string>
    <string name="hotDrinks"> Hot Drinks</string>
    <string name="sweets"> Sweets</string>
    <string name="salties"> Salties</string>
</resources>