<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Menu">
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="241dp"
        android:layout_height="wrap_content"
        android:src="@drawable/title"
        android:layout_marginTop="40dp"
        android:layout_gravity="center"
        />
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/ourMenu"
        android:textAllCaps="true"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"

        />
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="1"
        android:layout_marginTop="20dp"
        android:paddingHorizontal="50dp">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/coldDrinks"
            android:background="@drawable/rectangle_button"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:id="@+id/button_coldDrinks"
        />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hotDrinks"
            android:background="@drawable/rectangle_button"
            android:textColor="@android:color/white"
            android:textAllCaps="true"
            android:layout_marginTop="20dp"
            android:id="@+id/button_hotDrinks"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sweets"
            android:background="@drawable/rectangle_button"
            android:textColor="@android:color/white"
            android:textAllCaps="true"
            android:layout_marginTop="20dp"
            android:id="@+id/button_sweets"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/salties"
            android:background="@drawable/rectangle_button"
            android:textColor="@android:color/white"
            android:textAllCaps="true"
            android:layout_marginTop="20dp"
            android:id="@+id/button_salties"
            />
    </GridLayout>
</LinearLayout>