<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/purple_dark"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="530dp"
        android:scaleType="centerCrop"
        android:src="@drawable/thecheezery"/>

    <TextView
        android:layout_marginTop="20dp"
        android:paddingHorizontal="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/welcome"
        android:textColor="@color/white"
        android:textSize="25dp"/>

    <TextView
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_description"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:textSize="15dp"
        android:textStyle="italic"/>

    <Button
        android:id="@+id/boton"
        android:layout_marginTop="15dp"
        android:layout_width="237dp"
        android:layout_height="39dp"
        android:text="@string/getStarted"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:textSize="15dp"
        android:background="@drawable/round_button"
        />
</LinearLayout>